[package]
version = "0.1.0"
name = "pondron"
authors = ["Ben Goebel <jbwg312@gmail.com>"]
categories = ["category"]
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
strum = "0.18.0"
strum_macros = "0.18.0"
chrono = "0.4.15"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
